--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="root"></div>
-    <script type="text/babel">
+    <script type="module" type="text/babel">
         import React, { useState, useEffect, useRef } from 'react';
         import { Play, Pause, RotateCcw, Book, Volume2, VolumeX, Bell, BellOff } from 'lucide-react';
 
