--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Running Story Tracker</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+      <script src="https://js.puter.com/v2/"></script>
+
   <style>
     body {
       min-height: 100vh;
@@ -577,25 +579,12 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
 
       try {
         // Use Puter Chat API for story generation
-        const response = await fetch('https://api.puter.com/drivers/call', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            interface: 'puter-chat',
-            driver: 'openai',
-            method: 'chat',
-            args: {
-              model: 'gpt-3.5-turbo',
-              messages: [{ role: "user", content: prompt }],
-              temperature: 1,
-              max_tokens: 1000
-            }
-          })
-        });
-        const data = await response.json();
-        const storyText = (data.choices && data.choices[0] && data.choices[0].message.content)
-          ? data.choices[0].message.content
-          : "Could not generate story. Please try again.";
+       
+        var storyText;
+         puter.ai.chat("Explain quantum computing in simple terms", {model: 'claude-sonnet-4'})
+            .then(response => {
+                storyText = response.message.content[0].text;
+            });
         const newSegment = {
           segment: segmentNumber,
           text: storyText,
@@ -637,50 +626,9 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
       stopSpeaking();
       isSpeaking = true;
       renderAll();
-      try {
         // Puter TTS API
-        const response = await fetch('https://api.puter.com/drivers/call', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({
-            interface: 'puter-tts',
-            driver: 'openai',
-            method: 'speak',
-            args: {
-              text: text,
-              voice: 'alloy'
-            }
-          })
-        });
-        if (!response.ok) throw new Error('TTS request failed');
-        const audioBlob = await response.blob();
-        const audioUrl = URL.createObjectURL(audioBlob);
-        currentAudio = new Audio(audioUrl);
-        currentAudio.onended = () => {
-          isSpeaking = false;
-          URL.revokeObjectURL(audioUrl);
-          currentAudio = null;
-          renderAll();
-        };
-        currentAudio.onerror = () => {
-          isSpeaking = false;
-          URL.revokeObjectURL(audioUrl);
-          currentAudio = null;
-          renderAll();
-        };
-        await currentAudio.play();
-      } catch (error) {
-        console.error('TTS Error:', error);
-        isSpeaking = false;
-        // Fallback to browser TTS
-        const utterance = new SpeechSynthesisUtterance(text);
-        utterance.rate = 0.9;
-        utterance.onend = () => {
-          isSpeaking = false;
-          renderAll();
-        };
-        window.speechSynthesis.speak(utterance);
-      }
+       puter.ai.txt2speech(text, "en-US", "Danelle","generative")
+        
       renderAll();
     }
 
