--- a/index.html
+++ b/index.html
@@ -582,6 +582,7 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
 
          puter.ai.chat(prompt, {model: 'claude-sonnet-4'})
             .then(response => {
+              console.log(response)
                 storyText = response.message.content[0].text;
             }); 
             setTimeout(()=>{
