--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@
     let currentAudio = null;
     var storyText;
     // DOM references
+var lines
+
     const setupPanel = document.getElementById('setup-panel');
     const distanceDisplay = document.getElementById('distance-display');
     const speedDisplay = document.getElementById('speed-display');
@@ -466,7 +468,6 @@
       const segment = storySegments.find(s => s.segment === segmentNum);
       if (segment) speakText(segment.text);
     };
-
     // TTS toggle
     ttsToggleBtn.onclick = () => {
       isTTSEnabled = !isTTSEnabled;
@@ -651,7 +652,7 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
       // Use Puter Chat API for story generation
 
 
-      puter.ai.chat(prompt, { model: 'claude-sonnet-4' })
+      puter.ai.chat(prompt, { model: 'gpt-5-nano' })
         .then(response => {
           console.log(response)
           storyText = response.message.content[0].text;
@@ -666,20 +667,30 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
 
           // Auto-play TTS if enabled and tracking
           if (isTTSEnabled && isTracking) {
-            speakText(storyText);
+             lines = storyText.split('\n');
+             speakText(lines)
           }
 
           isGenerating = false;
           renderAll();
         });
     }
-
-    async function speakText(text) {
+var num = 0;
+    async function speakText(lines) {
       stopSpeaking();
+      var text = lines[num];
+      num++
       isSpeaking = true;
       renderAll();
       // Puter TTS API
-      puter.ai.txt2speech(text, "en-US", "Danelle", "generative")
+      puter.ai.txt2speech(text, "en-US", "Danelle", "generative").then(audio=> {
+        audio.play();
+        audio.onended = ()=> {
+          if(num <= lines.length){
+            speakText(lines)
+          }
+        }
+      })
 
       renderAll();
     }
