--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Running Story Tracker</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <script src="https://js.puter.com/v2/"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/openai@latest/dist/index.min.js"></script>
   <style>
     body {
       min-height: 100vh;
@@ -308,6 +308,7 @@
     var storyText;
     // DOM references
     var lines
+const openai = new OpenAI();
 
     const setupPanel = document.getElementById('setup-panel');
     const distanceDisplay = document.getElementById('distance-display');
@@ -652,27 +653,28 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
       // Use Puter Chat API for story generation
 
 
-      puter.ai.chat(prompt, { model: 'claude-opus-4' })
-        .then(response => {
-          console.log(response)
-          storyText = response.message.content[0].text;
-          const newSegment = {
-            segment: segmentNumber,
-            text: storyText,
-            speed: avgSpeed,
-            timestamp: new Date().toLocaleTimeString()
-          };
-          storySegments.push(newSegment);
-          // Send notification
+      const response = await openai.responses.create({
+        model: "gpt-4.1",
+        input: prompt
+      });
+      console.log(response)
+      storyText = response.message.content[0].text;
+      const newSegment = {
+        segment: segmentNumber,
+        text: storyText,
+        speed: avgSpeed,
+        timestamp: new Date().toLocaleTimeString()
+      };
+      storySegments.push(newSegment);
+      // Send notification
 
-          // Auto-play TTS if enabled and tracking
-          if (isTTSEnabled && isTracking) {
-            speakText(storyText);
-          }
+      // Auto-play TTS if enabled and tracking
+      if (isTTSEnabled && isTracking) {
+        speakText(storyText);
+      }
 
-          isGenerating = false;
-          renderAll();
-        });
+      isGenerating = false;
+      renderAll();
     }
 
     async function speakText(text) {
