--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
       isSpeaking = true;
       renderAll();
       // Puter TTS API
-      puter.ai.txt2speech(text, "en-US", "Arthur", "generative").then(audio => { audio.play() })
+      puter.ai.txt2speech(text, "en-US", "Danielle", "generative").then(audio => { audio.play() })
 
       renderAll();
     }
