--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@
       const prevSummary = storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ');
       const prompt = `You are writing segment ${segmentNumber} of an ongoing ${genre} story. This is a story for a runner, and they've been running at ${avgSpeed.toFixed(1)} mph, so make this segment ${paceDescription}.
 ${segmentNumber === 1
-          ? `This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 3-4 paragraphs.`
-          : `This is segment ${segmentNumber}. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 3-4 paragraphs.
+          ? `This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 7-8 paragraphs.`
+          : `This is segment ${segmentNumber}. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 7-8 paragraphs.
 Previous segments summary: ${prevSummary}`
         }
 Write ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!`;
@@ -680,7 +680,7 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
       isSpeaking = true;
       renderAll();
       // Puter TTS API
-      puter.ai.txt2speech(text, "en-US", "Danielle", "generative").then(audio => { audio.play() })
+      puter.ai.txt2speech(text).then(audio => { audio.play() })
 
       renderAll();
     }
