--- a/index.html
+++ b/index.html
@@ -653,13 +653,12 @@ Write ONLY the story segment, no meta-commentary. Make it exciting and match the
     const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
       method: "POST",
       headers: {
-        "Authorization": `Bearer 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
- `, // <-- put your free key here!
+        "Authorization": `Bearer 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`, // <-- put your free key here!
         "Content-Type": "application/json"
       },
       body: JSON.stringify({
         model: "deepseek-ai/deepseek-llm-7b-base",
-        messages: [{role:"user",content:prompt}],
+        messages: [{content:prompt}],
         max_tokens: 512
       })
     });
