--- a/index.html
+++ b/index.html
@@ -651,43 +651,26 @@ Previous segments summary: ${prevSummary}`
 Write ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!`;
 
       // Use DeepSeek via OpenRouter for story generation
-      const response = await fetch("https://openrouter.ai/api/v1/chat/completions", {
-        method: "POST",
-        headers: {
-          "Authorization": 'Bearer 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'
-`, // <-- put your free key here!
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          model: "google/gemini-2.0-flash-exp:free",
-          messages: [{
-            "role": "user",
-            "content": [
-              {
-                "type": "text",
-                "text": prompt
-              }
-            ],
-          }]
-        })
-      });
-      const data = await response.json();
-      console.log(data)
-      const storyText = data.choices[0].message.content;
-      const newSegment = {
-        segment: segmentNumber,
-        text: storyText,
-        speed: avgSpeed,
-        timestamp: new Date().toLocaleTimeString()
-      };
-      storySegments.push(newSegment);
 
-      // Auto-play TTS if enabled and tracking
-      if (isTTSEnabled && isTracking) {
-        speakText(storyText);
-      }
+      puter.ai.chat(prompt, { model: "gpt-5" })
+        .then(response => {
+          storyText = response.message.content[0].text;
+          const newSegment = {
+            segment: segmentNumber,
+            text: storyText,
+            speed: avgSpeed,
+            timestamp: new Date().toLocaleTimeString()
+          };
+          storySegments.push(newSegment);
 
-      isGenerating = false;
+          // Auto-play TTS if enabled and tracking
+          if (isTTSEnabled && isTracking) {
+            speakText(storyText);
+          }
+
+          isGenerating = false;
+        });
+
       renderAll();
     }
 
