--- a/index.html
+++ b/index.html
@@ -642,7 +642,7 @@
         : avgSpeed > 3 ? 'moderate tension'
           : 'reflective and atmospheric';
       const prevSummary = storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ');
-      const prompt = `You are writing segment ${segmentNumber} of an ongoing ${genre} story. This is a story for a runner, and they've been running at ${avgSpeed.toFixed(1)} mph, so make this segment ${paceDescription}.
+      const prompt = `You are a creative author and you are writing segment ${segmentNumber} of an ongoing ${genre} story. This is a story for a runner, and they've been running at ${avgSpeed.toFixed(1)} mph, so make this segment ${paceDescription}.
 ${segmentNumber === 1
           ? `This is the BEGINNING of the story. It should be written in English. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 7-8 paragraphs.`
           : `This is segment ${segmentNumber}. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 7-8 paragraphs.
