--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <button id="start-btn"><span id="play-icon">▶️</span> <span id="start-label">Start Running</span></button>
         <button id="pause-btn" class="pause" style="display:none;"><span>⏸</span> Pause</button>
         <button id="reset-btn" class="reset"><span>⟲</span> Reset</button>
-        <button class="reset" onclick="generateStorySegment(1,5 )"><span>⟲</span>test code</button>
+        <button class="reset" onclick="generateStorySegment(1,3)">test code</button>
       </div>
       <div id="generating-indicator" style="text-align:center; color:#fde68a; margin-top:1rem; display:none;"
         class="animate-pulse">✨ Generating your story segment...</div>
