--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
       {model: "gpt-5"} // Verified model name for Puter.js
     );
 
-    alert("Puter API Response:", JSON.stringify(response)); // Inspect this in console
+    alert("Puter API Response:" + JSON.stringify(response)); // Inspect this in console
     
     // Extract text from response (structure might vary by model)
     let storyText = "";
