--- a/index.html
+++ b/index.html
@@ -661,9 +661,9 @@
         // Extract text from response (structure might vary by model)
         let storyText = "";
         if (response?.message?.content) { // Common structure
-          storyText = response.message.content;
+          storyText = response.message.content[0].text;
         } else if (response?.content) {
-          storyText = response.content;
+          storyText = response.content[0].text;
         }
 
         if (!storyText || storyText.length < 50) {
@@ -672,7 +672,7 @@
 
         storySegments.push({
           segment: segmentNumber,
-          text: storyText.trim(),
+          text: storyText,
           speed: avgSpeed,
           timestamp: new Date().toLocaleTimeString()
         });
