--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
             content: prompt
           },
         ],
-          { model: "gpt-5-nano" } // Verified model name for Puter.js
+          { model: "openrouter:google/gemini-2.5-pro" } // Verified model name for Puter.js
         );
 
         alert("Puter API Response:" + JSON.stringify(response)); // Inspect this in console
